link html and js with button

--- a/mixedmessages.html
+++ b/mixedmessages.html
@@ -16,8 +16,8 @@
         <h3>What is your luck today?</h3>
         <div class="screen">
             <!--This div will have a background image of a horoscope wheel at 50% opacity, with two fields (button and response) overlaid-->
-            <button class="generator" type="button">Start</button>
-            <p class="response">Lorem ipsum</p>
+            <button class="generator" type="button" onclick="generateMessage()">Start</button>
+            <p id="response">Lorem ipsum</p>
         </div>
     </div>
   </body>
