--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
-    <link rel="stylesheet" href="mixedmessages.css">
+    <title>Mixed Messages</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="mixedmessages.js" async></script>
   </head>
   <body>
-    <script src="mixedmessages.js"></script>
     <div class="heading">
         <h1>Today and Tomorrow Channel</h1>
     </div>
